--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@nomicfoundation/hardhat-toolbox": "^2.0.1",
+    "crypto-js": "^4.1.1",
     "zokrates-js": "^1.1.5"
   }
 }
