--- a/CircomPayeCryptosystemV2/package.json
+++ b/CircomPayeCryptosystemV2/package.json
@@ -2,6 +2,7 @@
   "name": "hardhat-project",
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^2.0.2",
+    "@nomiclabs/hardhat-etherscan": "^3.1.7",
     "hardhat": "^2.13.0",
     "prettier": "^2.8.4",
     "prettier-plugin-solidity": "^1.1.3"
