--- a/CircomPayeCryptosystemV1/package.json
+++ b/CircomPayeCryptosystemV1/package.json
@@ -2,11 +2,12 @@
   "name": "hardhat-project",
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^2.0.2",
-    "hardhat": "^2.13.0",
+    "hardhat": "^2.14.0",
     "prettier": "^2.8.4",
     "prettier-plugin-solidity": "^1.1.3"
   },
   "dependencies": {
-    "dotenv": "^16.0.3"
+    "dotenv": "^16.0.3",
+    "ethers": "^5.0.0"
   }
 }
