--- a/CircomPayeCryptosystemV2/package.json
+++ b/CircomPayeCryptosystemV2/package.json
@@ -3,11 +3,12 @@
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^2.0.2",
     "@nomiclabs/hardhat-etherscan": "^3.1.7",
-    "hardhat": "^2.13.0",
+    "hardhat": "^2.14.0",
     "prettier": "^2.8.4",
     "prettier-plugin-solidity": "^1.1.3"
   },
   "dependencies": {
-    "dotenv": "^16.0.3"
+    "dotenv": "^16.0.3",
+    "ethers": "^5.0.0"
   }
 }
