--- a/CircomPayeCryptosystemV3/package.json
+++ b/CircomPayeCryptosystemV3/package.json
@@ -7,6 +7,7 @@
     "prettier-plugin-solidity": "^1.1.3"
   },
   "dependencies": {
+    "@openzeppelin/contracts": "^4.9.1",
     "dotenv": "^16.0.3",
     "ethers": "^5.0.0"
   }
