--- a/CircomPayeCryptosystemV3/package.json
+++ b/CircomPayeCryptosystemV3/package.json
@@ -8,7 +8,10 @@
   },
   "dependencies": {
     "@openzeppelin/contracts": "^4.9.1",
+    "child_process": "^1.0.2",
     "dotenv": "^16.0.3",
-    "ethers": "^5.0.0"
+    "ethers": "^5.0.0",
+    "fs": "^0.0.1-security",
+    "paillier-bigint": "^3.4.1"
   }
 }
